<resources>
    <string name="app_name">FaceCool</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="menu_live_camera">Live Camera</string>
    <string name="menu_classes">Classes</string>
    <string name="menu_students">Students</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_profile">Profile</string>
    <string name="classes_add_class_button">Add class</string>
    <string name="classes_search_for_class_hint">Search for classes</string>
    <string name="attendance_present">Present</string>
    <string name="attendance_absent">Absent</string>
    <string name="attendance_late">Late</string>
    <string name="stop_tracking">Stop</string>
    <string name="start_tracking">Start</string>
    <string name="class_report_title">"Report for: %1$s"</string>
    <string name="class_report_cvs_colum_labels">"%1$s , %2$s \n ID, First Name, Last Name"</string>
    <string name="class_report_absent_label">"X"</string>
    <string name="class_report_Late_label">"L"</string>
    <string name="class_report_present_label">"Y"</string>
    <string name="class_report_tab_title_yxl">3 Letter</string>
    <string name="class_report_tab_title">By class</string>
    <string name="class_report_tab_title_student">By student</string>
    <string name="class_report_class_list">Class List</string>
    <string name="class_report_manual_present">P</string>
    <string name="class_report_revert_manual">R</string>
    <string name="report_history_tab_title">History log</string>
    <string name="report_history_dialog_warning_delete_item">Are you sure you want to delete this record?</string>
    <string name="report_screen_title">Reports</string>
    <string name="dialog_alert_cancel_button">Cancel</string>
    <string name="dialog_alert_accept_button">Accept</string>
    <string name="dialog_alert_positive_button">OK</string>
    <string name="classes_screen_title">Classes</string>
    <string name="classes_dialog_warning_class_delete">Are you sure you want to delete this class?</string>
    <string name="class_details_title">"%1$s Details"</string>
    <string name="camera_screen_unidentified_label">Unidentified</string>
    <string name="camera_screen_tracking_started">Started</string>
    <string name="camera_screen_dialog_switch_in_out_mode_body">Switch in/out mode?</string>
    <string name="camera_screen_dialog_switch_out_mode_button">Out</string>
    <string name="camera_screen_dialog_switch_in_mode_button">In</string>
    <string name="camera_screen_title">Camera</string>
    <string name="settings_export_users">Export</string>
    <string name="settings_import_users">Import</string>
    <string name="camera_hand_mode_label">H</string>
    <string name="camera_kiosk_mode_label">K</string>
    <string name="camera_screen_switch_to_kiosk_mode_question">Switch to Kiosk Mode?</string>
    <string name="camera_screen_switch_to_hand_mode_question">Switch to Hand Mode?</string>
    <string name="camera_screen_enroll_yourself_as_administrator">Enroll yourself as administrator</string>
    <string name="camera_screen_ask_admin_pin">Input Admin Pin</string>
    <string name="camera_screen_wrong_pin">Wrong Pin Code</string>
    <string name="camera_screen_look_directly_at_camera">Please look straight!</string>
    <string name="lesson_select_dialog_title">Start a Lesson manually!</string>
    <string name="lesson_select_dialog_start_button">Start</string>
    <string name="lesson_select_dialog_name">Name</string>
    <string name="lesson_select_dialog_date">Date</string>
    <string name="lesson_select_dialog_start_time">Start</string>
    <string name="lesson_select_dialog_end_time">End</string>
    <string name="capture">Capture</string>
    <string name="grant_permission">Grant Permissions</string>
    <string name="file">File</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="pin">PIN</string>
    <string name="image_quality">Quality: </string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="welcome_back">Welcome back</string>
    <string name="create_account_title">Create new account if you don\'t have</string>
    <string name="start_without_account_title">Start using app without any account</string>
    <string name="create_account_title_again">If you have not any account, create one</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_account">Create new Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Repeat-password</string>
    <string name="attendance">Attendance</string>
    <string name="notes">Notes</string>
    <string name="parent_notification">Parent Notification: </string>
    <string name="parent_names">Parent Names</string>
    <string name="parent_names_hint">2 names separated by comma</string>
    <string name="parent_sms_enable">SMS</string>
    <string name="parent_email_enable">Email</string>
    <string name="parent_whatsapp_enable">Whatsapp</string>
    <string name="parent_all_enable">All</string>
    <string name="parent_emails">Parent Emails</string>
    <string name="parent_emails_hint">2 emails separated by comma</string>
    <string name="parent_sms_numbers">Parent SMS Numbers</string>
    <string name="parent_sms_numbers_hint">2 numbers separated by comma</string>
    <string name="parent_whatsapp">Parent Whatsapp Numbers</string>
    <string name="parent_whatsapp_hint">2 numbers separated by comma</string>
    <string name="parent_notification_title">Facecool informs you.</string>
    <string name="parent_notification_message">The Attendance of %1$s was registered at School at %2$s.</string>
    <string name="search_for_students">Search for students</string>
    <string name="select_all">Select all</string>
    <string name="accept_terms_conditions">Accept terms and conditions</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="automatic_enroll">Auto enrollment</string>
    <string name="auto_scroll">Auto scroll to enrollment progress</string>
    <string name="enroll_new_student">Enroll New Student</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="monday">Monday</string>
    <string name="all_day">All day</string>
    <string name="class_title">Class</string>
    <string name="id_already_enrolled">ID already Enrolled</string>
    <string name="first_name_not_found">First Name not Found</string>
    <string name="last_name_not_found">Last Name not Found</string>
    <string name="face_not_detected_on_image">Face not Detected on the Image</string>
    <string name="user_already_present_in_db">User already Present in Database</string>
    <string name="image_not_found">Image not Found</string>
    <string name="image_quality_low">Image Quality is Low</string>
    <string name="edit_field">Edit Field</string>
    <string name="take_picture">Take Picture</string>
    <string name="from_camera">From Camera</string>
    <string name="alert_for_delete_student">By continuing you will remove the student form %1$s class. Do you want to continue?</string>
    <string name="face_already_exist">This face already exist</string>
    <string name="face_already_admin">This face is already admin</string>
    <string name="add_new_user_activity_cancel_button">Cancel</string>
    <string name="add_new_user_activity_register_button">Register</string>
    <string name="add_new_user_activity_update_button">Update</string>
    <string name="add_new_user_activity_add_button">Add</string>
    <string name="add_new_user_activity_enroll_button">Enroll</string>
    <string name="add_new_user_activity_close_button">Close</string>
    <string name="add_new_user_activity_start_button">Start</string>
    <string name="add_new_user_activity_pause_button">Pause</string>
    <string name="add_new_user_activity_resume_button">Resume</string>
    <string name="photo_chooser_camera">Camera</string>
    <string name="photo_chooser_file">File</string>
    <string name="setting_select_all">All</string>
    <string name="setting_select_class">Classes</string>
    <string name="setting_select_student">Students</string>
    <string name="setting_select_attendance">Attendance</string>
    <string name="enrolled_classes">Enrolled classes</string>
    <string name="add_lesson_repeat_type">Recurrence Type</string>
    <string name="add_lesson_date">Date</string>
    <string name="add_lesson_start_date">Start Date</string>
    <string name="add_lesson_end_date">End Date</string>
    <string name="add_lesson_time">Time</string>
    <string name="add_lesson_start_time">Start Time</string>
    <string name="add_lesson_end_time">End Time</string>
    <string name="add_lesson_location">Location</string>
    <string name="add_lesson_kiosk">Kiosk</string>
    <string name="add_lesson_liveness">Liveness</string>
    <string name="add_lesson_to">To</string>
    <string name="add_new_lesson_kiosk_title">Kiosk</string>
    <string name="add_new_lesson_liveness_title">Liveness</string>
    <string name="lesson_details_for">Details for %1$s</string>
    <string name="add_lesson_title">Add New Lesson</string>
    <string name="edit_lesson">Edit Lesson</string>
    <string name="add_class_add_time_title">Add Class Occurrences</string>
    <string name="lessons_title">Lessons</string>
    <string name="lesson_status_finished">Finished</string>
    <string name="lesson_status_scheduled">Scheduled</string>
    <string name="lesson_status_progress">Progress</string>
    <string name="lesson_delete">Are you sure you want to delete this lesson?</string>
    <string name="lesson_attendance_for_student">Student attendance for \n%1$s</string>
    <string name="lesson_error_message">Error generating new lesson</string>
    <string name="lesson_create_confirm_message">%1$s lessons will be created. Do you want to continue?</string>
    <string name="lesson_day_monday">Mo</string>
    <string name="lesson_day_tuesday">Tu</string>
    <string name="lesson_day_wednesday">We</string>
    <string name="lesson_day_thursday">Th</string>
    <string name="lesson_day_friday">Fr</string>
    <string name="lesson_day_saturday">Sa</string>
    <string name="lesson_day_sunday">Su</string>
    <string name="add_class_name">Class Name</string>
    <string name="add_class_id">Class ID</string>
    <string name="add_class_select_student">Select Student</string>
    <string name="add_class_general_info">General Info</string>
    <string name="add_new_class_title">Add New Class</string>
    <string name="camera_detect_unknown_user">Unknown User</string>
    <string name="camera_detect_unenrolled_user">Unenrolled Student</string>
    <string name="camera_detect_no_live_user">No live Student</string>
    <string name="camera_detect_student">Welcome, %1$s</string>
    <string name="camera_detect_admin">Admin, %1$s</string>
    <string name="camera_detect_processing">Processing...</string>
    <string name="camera_detect_unknown_user_name"> \? </string>
    <string name="camera_screen_admin_detected">Admin detected!</string>
    <string name="camera_screen_lesson_started">Lesson started!</string>
    <string name="camera_screen_lesson_ended">Lesson ended!</string>
    <string name="camera_screen_kiosk_mode_started">Kiosk Mode</string>
    <string name="camera_screen_hand_mode_started">Hand Mode</string>
</resources>