<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/enrollmentBackgroundColor1">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/generic_toolbar" />

    <LinearLayout
        android:id="@+id/import_image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/camera_overlay_blue"
        android:layout_margin="10dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_container">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_take_picture"
            android:background="@drawable/btn_bkg_add_photo"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/inter_regular"
                android:padding="0dp"
                android:text="@string/capture"
                android:textColor="@color/primaryTextColor" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/ic_camera_temp"
                android:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_image_choser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/inter_regular"
                android:padding="0dp"
                android:text="@string/file"
                android:textColor="@color/titleTextColor" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/ic_file"
                android:tint="@color/black" />


        </LinearLayout>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/profile_picture_container"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/import_image_container">

        <ProgressBar
            android:id="@+id/progress_user_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/unknown_user" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/enrollmentBackgroundColor2"
        android:orientation="vertical"
        android:paddingTop="70dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/import_image_container">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/enrollmentBackgroundColor2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp">


                <TextView
                    style="@style/text_enroll_label"
                    android:layout_marginTop="0dp"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/first_name"
                    style="@style/btn_enroll_input"
                    android:drawableEnd="@drawable/icon_user"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@+id/last_name" />

                <TextView
                    style="@style/text_enroll_label"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/last_name"
                    style="@style/btn_enroll_input"
                    android:drawableEnd="@drawable/icon_user"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@+id/id" />

                <TextView
                    style="@style/text_enroll_label"
                    android:text="@string/id" />

                <EditText
                    android:id="@+id/id"
                    style="@style/btn_enroll_input"
                    android:drawableEnd="@drawable/icon_user"
                    android:hint="@string/id"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@+id/email" />

                <TextView
                    style="@style/text_enroll_label"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email"
                    style="@style/btn_enroll_input"
                    android:drawableEnd="@drawable/icon_user"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/adress" />

                <TextView
                    style="@style/text_enroll_label"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/adress"
                    style="@style/btn_enroll_input"
                    android:drawableEnd="@drawable/icon_user"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress" />

                <TextView
                    style="@style/text_enroll_label"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/phone_number"
                    style="@style/btn_enroll_input"
                    android:drawableEnd="@drawable/icon_user"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="phone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                    <TextView
                        style="@style/twin_text_enroll"/>
                    <CheckBox
                        android:id="@+id/checkbox_twin"
                        style="@style/twin_checkbox_enroll"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                    <TextView
                        style="@style/twin_text_enroll"
                        android:text="@string/parent_notification"/>
                    <CheckBox
                        android:id="@+id/checkbox_parent"
                        style="@style/twin_checkbox_enroll"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/parent_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_enroll_label"
                        android:text="@string/parent_names" />

                    <EditText
                        android:id="@+id/parent_names"
                        style="@style/btn_enroll_input"
                        android:drawableEnd="@drawable/icon_user"
                        android:hint="@string/parent_names_hint"
                        android:imeOptions="actionDone"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/checkbox_sms"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/white"
                            android:textColor="@color/white"
                            android:text="@string/parent_sms_enable"/>
                        <CheckBox
                            android:id="@+id/checkbox_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/white"
                            android:textColor="@color/white"
                            android:text="@string/parent_email_enable"/>
                        <CheckBox
                            android:id="@+id/checkbox_whatsapp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.4"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/white"
                            android:textColor="@color/white"
                            android:text="@string/parent_whatsapp_enable"/>
                        <CheckBox
                            android:id="@+id/checkbox_all"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/white"
                            android:textColor="@color/white"
                            android:text="@string/parent_all_enable"/>
                    </LinearLayout>

                    <TextView
                        style="@style/text_enroll_label"
                        android:text="@string/parent_emails" />

                    <EditText
                        android:id="@+id/parent_emails"
                        style="@style/btn_enroll_input"
                        android:drawableEnd="@drawable/icon_user"
                        android:hint="@string/parent_emails_hint"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                    <TextView
                        style="@style/text_enroll_label"
                        android:text="@string/parent_sms_numbers" />

                    <EditText
                        android:id="@+id/parent_sms_numbers"
                        style="@style/btn_enroll_input"
                        android:drawableEnd="@drawable/icon_user"
                        android:hint="@string/parent_sms_numbers_hint"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                    <TextView
                        style="@style/text_enroll_label"
                        android:text="@string/parent_whatsapp" />

                    <EditText
                        android:id="@+id/parent_whatsapp_numbers"
                        style="@style/btn_enroll_input"
                        android:drawableEnd="@drawable/icon_user"
                        android:hint="@string/parent_whatsapp_hint"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="8dp">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bkg_secondary"
                android:fontFamily="@font/inter_medium"
                android:text="@string/add_new_user_activity_cancel_button"
                android:textColor="@color/primaryTextColor"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bkg_primary"
                android:fontFamily="@font/inter_medium"
                android:text="@string/add_new_user_activity_enroll_button"
                android:textColor="@color/primaryTextColor"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel_button" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_quality"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_image_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>