<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/student_report_card"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/class_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:lines="1"
            android:fontFamily="@font/inter_light"
            android:text="@string/class_title"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/bar_date_name"
            android:layout_width="0dp"
            android:lines="1"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:fontFamily="@font/inter_light"
            android:text="@string/add_lesson_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/in_name"
            android:layout_width="0dp"
            android:lines="1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_light"
            android:text="@string/camera_screen_dialog_switch_in_mode_button"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/out_name"
            android:layout_width="0dp"
            android:lines="1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_light"
            android:text="@string/camera_screen_dialog_switch_out_mode_button"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.cardview.widget.CardView>