<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/itemsToolbarBackgroundColorTransparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alert_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primaryTextColor"
                android:fontFamily="@font/inter_bold"
                android:text="@string/setting_select_all"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/students"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primaryTextColor"
                android:fontFamily="@font/inter_bold"
                android:text="@string/setting_select_student"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/classes"
                android:layout_width="match_parent"
                android:buttonTint="@color/primaryTextColor"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/setting_select_class"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/detections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primaryTextColor"
                android:fontFamily="@font/inter_bold"
                android:text="@string/setting_select_attendance"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bkg_terciary"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/dialog_alert_cancel_button"
                    android:textColor="@color/black"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/accept_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bkg_primary"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/dialog_alert_accept_button"
                    android:textColor="@color/white"
                    app:backgroundTint="@null" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>
